--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.2",
     "rxjs": "~7.5.0",
+    "sweetalert": "^2.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
