--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^14.2.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.2",
+    "chart.js": "^2.9.4",
     "firebase": "^9.13.0",
     "rxjs": "~7.5.0",
     "sweetalert": "^2.1.2",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^14.2.6",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/chart.js": "^2.9.37",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
